[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/Difios.jpeg" type="Texture" id=1]
[ext_resource path="res://src/fragment_forge/cards/CardFrontRequirements.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/fragment_forge/cards/CardFrontValue.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/fragment_forge/cards/CardFrontHeader.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/fragment_forge/cards/GeneralCardFront.gd" type="Script" id=6]
[ext_resource path="res://shaders/Warping.shader" type="Shader" id=8]
[ext_resource path="res://src/fragment_forge/Theme/Theme_FF.tres" type="Theme" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 8 )
shader_param/is_card = true

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_bottom = 1.0
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Front" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1550.0
margin_bottom = -660.0
mouse_filter = 2
theme = ExtResource( 9 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Art" type="TextureRect" parent="."]
visible = false
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="CardText" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtLayover" type="VBoxContainer" parent="CardText"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
mouse_filter = 2

[node name="Header" parent="CardText/ArtLayover" instance=ExtResource( 4 )]

[node name="Type" type="Label" parent="CardText/ArtLayover"]
margin_top = 23.0
margin_right = 150.0
margin_bottom = 39.0
rect_min_size = Vector2( 50, 16 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Type"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Requirements" parent="CardText/ArtLayover" instance=ExtResource( 2 )]
margin_top = 43.0
margin_bottom = 99.0

[node name="Control" type="Control" parent="CardText/ArtLayover"]
margin_top = 103.0
margin_right = 150.0
margin_bottom = 129.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Tags" type="Label" parent="CardText/ArtLayover"]
margin_top = 133.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 146, 17 )
size_flags_vertical = 1
text = "Tag1 - Tag2"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="OutsideArt" type="PanelContainer" parent="CardText"]
self_modulate = Color( 1, 1, 1, 0.254902 )
material = SubResource( 4 )
margin_top = 149.0
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="ValueContainer" parent="CardText/OutsideArt" instance=ExtResource( 3 )]
margin_left = 3.0
margin_right = 147.0
margin_bottom = 90.0

[node name="Abilities" type="Label" parent="CardText/OutsideArt"]
margin_left = 3.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 89.0
rect_min_size = Vector2( 120, 88 )
text = "Text"
autowrap = true
